--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /.metadata/
 Prueba Lucas/src/.project
+volandouy oficial/src/Logica/Equipaje.class
+volandouy oficial/src/Logica/Pasaje.class
+volandouy oficial/src/Logica/Equipaje.class
