--- a/volandouy oficial/src/Logica/.gitignore
+++ b/volandouy oficial/src/Logica/.gitignore
@@ -11,3 +11,8 @@
 /TipoAsiento.class
 /Equipaje.class
 /Pasaje.class
+/Cliente.class
+/Paquetes.class
+/Rutas.class
+/VueloEspecifico.class
+/TipoDocumento.class
