--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -14,3 +14,7 @@
 /RegistroUsuario$1.class
 /RegistroUsuario.class
 /Menu$2.class
+/RegistroCiudad$1.class
+/RegistroCiudad.class
+/RegistroCiudad$2.class
+/Menu$3.class
