--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -17,3 +17,6 @@
 /RegistroUsuario$2.class
 /Menu$3.class
 /RegistroCiudad$3.class
+/RegistroCiudad$1.class
+/RegistroCiudad$2.class
+/RegistroCiudad.class
