--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -20,3 +20,8 @@
 /RegistroCiudad$1.class
 /RegistroCiudad$2.class
 /RegistroCiudad.class
+/RegistroCategoria$1.class
+/RegistroCategoria.class
+/Menu$4.class
+/RegistroCategoria$2.class
+/RegistroCategoria$3.class
