--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -20,3 +20,8 @@
 /RegistroCiudad$1.class
 /RegistroCiudad$2.class
 /RegistroCiudad.class
+/RegistroVuelo$1.class
+/RegistroVuelo.class
+/RegistroVuelo$2.class
+/Menu$4.class
+/RegistroVuelo$3.class
