--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -25,3 +25,8 @@
 /Menu$4.class
 /RegistroCategoria$2.class
 /RegistroCategoria$3.class
+/RegistrarRutaVuelo$1.class
+/RegistrarRutaVuelo.class
+/RegistrarRutaVuelo$2.class
+/RegistrarRutaVuelo$3.class
+/Menu$5.class
