registroPaqueteRuta en proceso

--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -25,3 +25,7 @@
 /RegistroVuelo$2.class
 /Menu$4.class
 /RegistroVuelo$3.class
+/RegistroPaquetesDeRutasDeVuelo$1.class
+/RegistroPaquetesDeRutasDeVuelo.class
+/RegistroPaqueteRuta$1.class
+/RegistroPaqueteRuta.class
