--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Prueba Lucas/src/.project
 volandouy oficial/src/Logica/Equipaje.class
 volandouy oficial/src/Logica/Pasaje.class
 volandouy oficial/src/Logica/Equipaje.class
+volandouy oficial/src/Logica/*.class
+
