Agrego ConsultaUsuario.java con Swing, actualizo .gitignore e integro en Menu.java

--- a/volandouy oficial/src/Presentacion/.gitignore
+++ b/volandouy oficial/src/Presentacion/.gitignore
@@ -1,32 +1,2 @@
-/Principal$1.class
-/Principal$10.class
-/Principal$2.class
-/Principal$3.class
-/Principal$4.class
-/Principal$5.class
-/Principal$6.class
-/Principal$7.class
-/Principal$8.class
-/Principal$9.class
-/Principal.class
-/Menu.class
-/Menu$1.class
-/RegistroUsuario$1.class
-/RegistroUsuario.class
-/Menu$2.class
-/RegistroUsuario$2.class
-/Menu$3.class
-/RegistroCiudad$3.class
-/RegistroCiudad$1.class
-/RegistroCiudad$2.class
-/RegistroCiudad.class
-/RegistroCategoria$1.class
-/RegistroCategoria.class
-/Menu$4.class
-/RegistroCategoria$2.class
-/RegistroCategoria$3.class
-/RegistrarRutaVuelo$1.class
-/RegistrarRutaVuelo.class
-/RegistrarRutaVuelo$2.class
-/RegistrarRutaVuelo$3.class
-/Menu$5.class
+/*.class
+/*.from
