--- a/volandouy oficial/.classpath
+++ b/volandouy oficial/.classpath
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/lucas/Downloads/OpenJDK17U-jdk_x64_windows_hotspot_17.0.14_7.zip"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/jcalender/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/src/com.miglayout.swing_11.4.2.jar"/>
+	<classpathentry kind="lib" path="src/com.miglayout.core_11.4.2.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
