--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ volandouy oficial/src/Logica/Equipaje.class
 volandouy oficial/src/Logica/Pasaje.class
 volandouy oficial/src/Logica/Equipaje.class
 volandouy oficial/src/Logica/*.class
+Prueba Lucas/src/bin/.project
