--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ volandouy oficial/src/Logica/Pasaje.class
 volandouy oficial/src/Logica/Equipaje.class
 volandouy oficial/src/Logica/*.class
 Prueba Lucas/src/bin/.project
+volandouy oficial/target/*
+/volandouy oficial/target
