--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Prueba Lucas/src/bin/.project
 volandouy oficial/target/*
 /volandouy oficial/target
 volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-oficial/pom.properties
+volandouy oficial/*.log
