--- a/volandouy oficial/.classpath
+++ b/volandouy oficial/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -17,7 +18,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jcalender/lib/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="/src/com.miglayout.swing_11.4.2.jar"/>
 	<classpathentry kind="lib" path="src/com.miglayout.core_11.4.2.jar"/>
+	<classpathentry kind="lib" path="src/com.miglayout.swing_11.4.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
