Dejamos server andandoooo

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ volandouy oficial/target/*
 /volandouy oficial/target
 volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-oficial/pom.properties
 volandouy oficial/*.log
+volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-oficial/pom.properties
+Servers/.project
