--- a/volandouy oficial/.classpath
+++ b/volandouy oficial/.classpath
@@ -40,7 +40,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/com.miglayout.swing_11.4.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-10.1.36">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v10.1">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
