--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-ofic
 volandouy oficial/*.log
 volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-oficial/pom.properties
 Servers/.project
+Servers/Tomcat v10.1 Server at localhost-config/catalina.policy
+Servers/Tomcat v10.1 Server at localhost-config/catalina.policy
+Servers/Tomcat v10.1 Server at localhost-config/catalina.properties
+Servers/Tomcat v10.1 Server at localhost-config/context.xml
+volandouy oficial/.settings/org.eclipse.wst.common.component
+volandouy oficial/.settings/org.eclipse.wst.common.project.facet.core.xml
