--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-ofic
 volandouy oficial/*.log
 volandouy oficial/target/classes/META-INF/maven/volandouy.oficial/volandouy-oficial/pom.properties
 Servers/.project
+Servers/apache-tomcat-10.1.36 at localhost-config/catalina.policy
+Servers/apache-tomcat-10.1.36 at localhost-config/catalina.properties
+Servers/apache-tomcat-10.1.36 at localhost-config/context.xml
+Servers/apache-tomcat-10.1.36 at localhost-config/server.xml
+Servers/apache-tomcat-10.1.36 at localhost-config/tomcat-users.xml
+Servers/apache-tomcat-10.1.36 at localhost-config/web.xml
