Agrego JUnit Test

--- a/volandouy oficial/.classpath
+++ b/volandouy oficial/.classpath
@@ -40,5 +40,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/com.miglayout.swing_11.4.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
