--- a/volandouy oficial/src/.classpath
+++ b/volandouy oficial/src/.classpath
@@ -7,9 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="com.miglayout.swing_11.4.2.jar"/>
 	<classpathentry kind="lib" path="com.miglayout.core_11.4.2.jar"/>
-	<classpathentry kind="lib" path="/lib/jcalender/lib/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="com.jgoodies.forms_1.9.0.v20240327-0800.jar"/>
 	<classpathentry kind="lib" path="com.jgoodies.common_1.8.1.v20240327-0800.jar"/>
+	<classpathentry kind="lib" path="/volandouy-oficial/lib/jcalender/jcalendar-1.4.zip"/>
 	<classpathentry kind="output" path="bin"/>
-
 </classpath>
