--- a/volandouy oficial/.classpath
+++ b/volandouy oficial/.classpath
@@ -40,5 +40,10 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="src/com.miglayout.swing_11.4.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v10.1">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
