--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ Servers/apache-tomcat-10.1.36 at localhost-config/context.xml
 Servers/apache-tomcat-10.1.36 at localhost-config/server.xml
 Servers/apache-tomcat-10.1.36 at localhost-config/tomcat-users.xml
 Servers/apache-tomcat-10.1.36 at localhost-config/web.xml
+/AppWeb/.idea
