--- a/AppWeb/pom.xml
+++ b/AppWeb/pom.xml
@@ -49,7 +49,7 @@
 </properties>
 
   <dependencies>
-  
+
   	
 	<dependency>
 	  <groupId>volandouy.oficial</groupId>
@@ -143,6 +143,26 @@
 	  <scope>test</scope>
 	</dependency>
 
+      <dependency>
+          <groupId>jakarta.xml.bind</groupId>
+          <artifactId>jakarta.xml.bind-api</artifactId>
+          <version>3.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.glassfish.jaxb</groupId>
+          <artifactId>jaxb-runtime</artifactId>
+          <version>3.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>jakarta.xml.ws</groupId>
+          <artifactId>jakarta.xml.ws-api</artifactId>
+          <version>3.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.sun.xml.ws</groupId>
+          <artifactId>rt</artifactId>
+          <version>3.0.1</version>
+      </dependency>
 
  </dependencies>
 
