--- a/AppWeb/pom.xml
+++ b/AppWeb/pom.xml
@@ -22,6 +22,13 @@
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-maven-plugin</artifactId>
             <version>4.0.3</version>
+            <configuration>
+                <wsdlUrls>
+                    <wsdlUrl>http://localhost:9128/volando?wsdl</wsdlUrl>
+                </wsdlUrls>
+                <packageName>uy.volando.publicar</packageName>
+                <sourceDestDir>${project.basedir}/src/main/java</sourceDestDir>
+            </configuration>
             <executions>
                 <execution>
                     <goals>
