--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Servers/apache-tomcat-10.1.36 at localhost-config/web.xml
 /volandouy oficial/.idea
 /AppWeb/.idea
 /volandouy oficial/.idea
+/AppWeb/src/main/java/uy/volando/publicar
