--- a/volandouy oficial/pom.xml
+++ b/volandouy oficial/pom.xml
@@ -6,7 +6,7 @@
   <groupId>volandouy.oficial</groupId>
   <artifactId>volandouy-oficial</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging> <!-- 💡 clave -->
+  <packaging>jar</packaging>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
@@ -132,6 +132,28 @@
       </configuration>
     </plugin>
 
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.6.1</version>
+          <executions>
+              <execution>
+                  <phase>package</phase>
+                  <goals>
+                      <goal>shade</goal>
+                  </goals>
+                  <configuration>
+                      <transformers>
+                          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                              <mainClass>uy.volando.main.MainServidor</mainClass>
+                          </transformer>
+                      </transformers>
+                      <finalName>servidor</finalName>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
+
   
   <!--<plugin>
 	  <groupId>org.apache.maven.plugins</groupId>
@@ -154,7 +176,7 @@
 	    </execution>
 	  </executions>
 	</plugin>-->
-	
+
   </plugins>
 </build>
 </project>
